# meeting-dice

./: Cargo.toml  README.md
.github/workflows/: main.yml  pr.yml  release.yml
src/: data.rs  main.rs  run.rs
