[package]
name = "meeting-dice"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool that helps you to choose in a team who's gonna be the next meeting chair."
repository = "https://github.com/yozhgoor/meeting-dice"
homepage = "https://github.com/yozhgoor/meeting-dice"
documentation = "https://docs.rs/meeting-dice"
readme = "README.md"
keywords = ["cli", "random", "chooser", "meetings"]
categories = ["command-line-utilities"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
xdg = "2.2"

[target.'cfg(windows)'.dependencies]
dirs = "4.0"
